[package]
name = "df-bindings"
version = "0.1.0"
authors = ["Simon Buchan <simon.buchan@skilitics.com>"]
edition = "2018"
resolver = "2"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = "0.10"

[build-dependencies]
windows = "0.10"
