[package]
name = "df-explorer"
version = "0.1.0"
authors = ["Simon Buchan <simon.buchan@skilitics.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.12"

formats = { package = "df-formats", path = "../formats" }
