[package]
name = "df-explorer"
version = "0.1.0"
authors = ["Simon Buchan <simon.buchan@skilitics.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
formats = { package = "df-formats", path = "../formats" }
level-geometry = { package = "df-level-geometry", path = "../level-geometry" }

eframe = "0.12"
registry = "1"
