[package]
name = "df-formats"
version = "0.1.0"
authors = ["Simon Buchan <simon.buchan@skilitics.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bindings = { package = "df-bindings", path = "../bindings" }

midly = "0.5"
nom = { version = "6", features = ["std"] }
