[package]
name = "df-level-geometry"
version = "0.1.0"
authors = ["Simon Buchan <simon.buchan@skilitics.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
formats = { package = "df-formats", path = "../formats" }

triangulate = "0.1"
mint = "0.5"
