[package]
name = "df-level-viewer"
version = "0.1.0"
authors = ["Simon Buchan <simon.buchan@skilitics.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
formats = { package = "df-formats", path = "../formats" }
level-geometry = { package = "df-level-geometry", path = "../level-geometry" }

cgmath = { version = "0.18", features = ["mint"] }
mint = "0.5"
pollster = "0.2"
registry = "1"
winit = "0.25"
wgpu = "0.8"
wgpu-subscriber = "0.1"